--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.2.0",
     "@fontsource/inter": "^5.0.20",
+    "@stripe/stripe-js": "^4.3.0",
     "aws-amplify": "^6.5.1",
+    "aws-sdk": "^2.1678.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^16.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
